Add elm, remove everything else.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "An untitled goose like notebook",
   "main": "index.js",
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "autoprefixer": "^9.6.1",
     "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "elm-webpack-loader": "^6.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
